tests/ui/g-route-unprojectable.stderr
error[E0080]: evaluation panicked: Route unprojectable for this role: arms not mergeable, wire dispatch non-deterministic, and no dynamic policy annotation provided
 --> src/global/program/source.rs
  |
  |         validate_all_roles(&image, source);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::global::program::source::ValidatedProgram::<hibana::g::Route<hibana::g::Seq<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::global::types::Message<hibana::global::types::LabelMarker<118>, (), control_kinds::RouteControl<0>>>, hibana::g::Seq<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<42>, ()>>, hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<99>, ()>>>>, hibana::g::Seq<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::global::types::Message<hibana::global::types::LabelMarker<119>, (), control_kinds::RouteControl<0>>>, hibana::g::Seq<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<42>, ()>>, hibana::g::Seq<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<99>, ()>>, hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<77>, ()>>>>>>>::PROGRAM_IMAGE` failed inside this call
  |
note: inside `hibana::global::compiled::lowering::seal::validate_all_roles`
 --> src/global/compiled/lowering/seal.rs
  |
  |     ProjectionSeal::<1>::validate_compiled_layout(&view, eff_list);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::compiled::lowering::seal::ProjectionSeal::<1>::validate_compiled_layout`
 --> src/global/compiled/lowering/seal.rs
  |
  |         Self::validate_route_projection_guarantees(view, eff_list);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::compiled::lowering::seal::ProjectionSeal::<1>::validate_route_projection_guarantees`
 --> src/global/compiled/lowering/seal.rs
  |
  | /                 Self::validate_route_scope(
  | |                     view,
  | |                     eff_list,
  | |                     scope_markers,
... |
  | |                     marker.linger,
  | |                 );
  | |_________________^
note: inside `hibana::global::compiled::lowering::seal::ProjectionSeal::<1>::validate_route_scope`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/global/compiled/lowering/seal.rs
  |
  | /         panic!(concat!(
  | |             "Route unprojectable for this role: arms not mergeable, ",
  | |             "wire dispatch non-deterministic, ",
  | |             "and no dynamic policy annotation provided",
  | |         ));
  | |__________- in this macro invocation

note: erroneous constant encountered
 --> src/global/program/source.rs
  |
  |     &ValidatedProgram::<Steps>::PROGRAM_IMAGE
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |                 Self::STAMP,
  |                 ^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn hibana::global::role_program::program::project_typed_program::<1, hibana::g::Route<Seq<hibana::g::Send<Role<0>, Role<0>, hibana::global::types::Message<hibana::global::types::LabelMarker<118>, (), RouteControl<0>>>, Seq<hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<42>, ()>>, hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<99>, ()>>>>, Seq<hibana::g::Send<Role<0>, Role<0>, hibana::global::types::Message<hibana::global::types::LabelMarker<119>, (), RouteControl<0>>>, Seq<hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<42>, ()>>, Seq<hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<99>, ()>>, hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<77>, ()>>>>>>>`
 --> src/global/program.rs
  |
  |         crate::global::role_program::project_typed_program(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
